--- a/src/samples/Wodsoft.ComBoost.Forum/wwwroot/lib/editor.md/examples/html-preview-markdown-to-html.html
+++ b/src/samples/Wodsoft.ComBoost.Forum/wwwroot/lib/editor.md/examples/html-preview-markdown-to-html.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="zh">
     <head>
         <meta charset="utf-8" />
@@ -28,7 +28,6 @@
             </div>
             <div id="test-editormd-view2">
                 <textarea id="append-test" style="display:none;">
-
 ###科学公式 TeX(KaTeX)
                     
 $$E=mc^2$$
